k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-deployment
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
        - name: auth-deployment
          image: arunvaradharajalu/lms-api-auth
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:      
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP  
  selector:
    app: auth-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
