k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-deployment
  template:
    metadata:
      labels:
        app: notification-deployment
    spec:
      containers:
        - name: notification-deployment
          image: arunvaradharajalu/lms-api-notification
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:      
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP  
  selector:
    app: notification-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
