k8s/ingress-dev-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/api/main/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service: 
                name: course-service
                port:
                  number: 3000
          - path: "/api/auth/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service: 
                name: auth-service
                port:
                  number: 3000
          - path: "/api/notification/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service: 
                name: notification-service
                port:
                  number: 3000
