k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use the ClusterIssuer created earlier
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-rules
  namespace: default
spec:
  ingressClassName: nginx-class
  tls:
  - hosts:
      - lms-staging.com
    secretName: your-domain-tls  # Cert-Manager will create this secret
  rules:
  - host: lms-staging.com
    http:
      paths:
        - path: /api/main/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: course-service
              port:
                number: 3000
        - path: /api/auth/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service
              port:
                number: 3000
        - path: "/api/notification/?(.*)"
          pathType: ImplementationSpecific
          backend:
            service: 
              name: notification-service
              port:
                number: 3000
